[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/kenney_prototype_textures/orange/texture_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/doors.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )
metallic = 0.37
roughness = 0.23

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 10, 20, 2 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 4.93599, 9.90138, 0.997037 )

[sub_resource type="SphereShape" id=4]
radius = 18.7475

[node name="doors" type="Spatial" groups=["Doors"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.240904, 55.8332 )
script = ExtResource( 2 )

[node name="l_door" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0618, 9.21664, 0 )

[node name="door" type="MeshInstance" parent="l_door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54804, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="StaticBody" type="StaticBody" parent="l_door/door"]

[node name="CollisionShape" type="CollisionShape" parent="l_door/door/StaticBody"]
shape = SubResource( 3 )

[node name="r_door" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.8276, 9.23139, 0 )

[node name="door" type="MeshInstance" parent="r_door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41178, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="StaticBody" type="StaticBody" parent="r_door/door"]

[node name="CollisionShape" type="CollisionShape" parent="r_door/door/StaticBody"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64795, 9.62844, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
